upgrade dependencies and use omnifaces to remove extension view